Sim sharing: Added messages for changes to the voltage measured by the voltmeter.
Sim sharing: Added notification message for breaking of connections.
Sim sharing: Added notification message for the formation of connections.
Sim sharing: Added instance identifiers to the circuit elements.
# 3.20.08 (71979) Feb 5, 2013
2/5/13 Deploying to dev for review and discussion of progress on data logging feature.
Sim sharing: Made the check boxes for the voltmeter and the two types of ammeters send up sim sharing notifications.
Sim sharing: Added sim sharing message that indicates when a circuit component (called a 'branch' in the source code) is removed from the play area.
Sim sharing: Added sim sharing message that indicates when a wire segment has been moved by the user.
Sim sharing: Added sim sharing message that indicates when components in the circuit have been moved by the user.
Sim sharing: Added user component IDs for all the basic circuit elements that can be added from the tool box.
Sim sharing: Generalized sim sharing message for component creation, moved message sending into Circuit class to avoid creation messages at startup (due to creation of tool box nodes).
UBC study: Changed study name from "ubc-feb-2013" to "ubc-spring-2013".
UBC study: Changed configuration to launch DC-only version of sim.
UBC study: Added prompt for student ID.
# 3.20.07 (71899) Jan 29, 2013
1/29/13 Deploying initial version for UBC study to dev for some early testing.
Made UBC study flavor request all permissions.
Added new flavor for UBC study, targeted for February 2013.
Removed "goldberg" flavor.
# 3.20.06 (66288) Jul 26, 2012
# 3.20.05 (66287) Jul 26, 2012
7/26/2012 Added a new sim that has 1.0 Ohm internal resistance batteries by default
# 3.20.04 (65848) Jul 16, 2012
7/16/12 dev version that reflects changes to sponsor feature
7/16/12 #3380, add "-sponsor-off" arg to build.properties for production version of CCK DC
7/16/12 #3380, restore sponsor prototype files for CCK DC