@@ -1,3 +1,4 @@
+Sim Sharing: Added messages for changes to the connection status of the voltmeter leads.
 Sim sharing: Added messages for changes to the voltage measured by the voltmeter.
 Sim sharing: Added notification message for breaking of connections.
 Sim sharing: Added notification message for the formation of connections.
